--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
     <div id="TFS"> <br>
       <p class="noindent"> We start with the loop gain transfer function:</p>
       <div id="LG">
-		  <script type="math/tex" id="MathJax-Element-1"></script>
+		  <script type="math/tex; mode=display" id="MathJax-Element-1"></script>
 	  </div>
       <br>
       <p class="noindent">The characteristic equation (i.e., the denominator of the closed loop transfer function) is
