--- a/index.html
+++ b/index.html
@@ -294,8 +294,8 @@
 		  A program (like MATLAB) can do this easily, but to make a sketch, by hand, of
           the location
           of the roots as K varies we need some information: <br>
-          <span id="TFinfo"><ul><li>
-		   </li></ul></span> </p>
+          <span id="TFinfo"><ul>
+		   </ul></span> </p>
         <br>
         <div id="explainRB" style="float:left; margin-right:5em;">
           <h2>Select rule to be explained</h2>
