--- a/index.html
+++ b/index.html
@@ -460,6 +460,6 @@
   <!-- InstanceEndEditable -->
   <hr class="fullWidth">
   <p style="text-align: right; font-size: smaller"><a href="https://lpsa.swarthmore.edu/References.html">References</a></p>
-  <div id="siteInfo"><p class="center">© Copyright 2005 to 2022 Erik Cheever&nbsp;&nbsp;&nbsp;
-		This page may be freely used for educational purposes, but the url must be referenced.</p>
+  <div><p class="center">© Copyright 2005 to 2022 Erik Cheever&nbsp;&nbsp;&nbsp;
+		This page may be freely used for educational purposes, but the url must be referenced.</p></div>
 		
